<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity"
    android:gravity="center_horizontal"
    android:orientation="vertical">




    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:inputType="textAutoCorrect"
        android:id="@+id/editText_voornaam"
        android:hint="@string/voornaam"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textAutoCorrect"
        android:id="@+id/editText_achternaam"
        android:hint="@string/achternaam"/>


    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editText_login_register"
        android:hint="@string/username"/>


    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:id="@+id/editText_password_register"
        android:hint="@string/password"/>


    <EditText
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/editText_paypalemail"
        android:hint="@string/paypal_email"/>


    <Button
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button_register"
        android:text="@string/register"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/textView_errorRegister"
        android:textColor="#a4c639"
        android:text=""
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:id="@+id/button_back"
        android:text="@string/back"/>



</LinearLayout>