<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:id="@+id/editText_username"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:id="@+id/editText_password"
        android:hint="@string/password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button_login"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:id="@+id/textView_register"
            android:text="@string/register"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#a4c639"
        android:paddingLeft="5dp"
        android:id="@+id/textView_error"
        android:text=""/>


</LinearLayout>